<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2016 Glucosio Foundation
  ~
  ~ This file is part of Glucosio.
  ~
  ~ Glucosio is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, version 3.
  ~
  ~ Glucosio is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Glucosio.  If not, see <http://www.gnu.org/licenses/>.
  ~
  ~
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/helloactivity_mainframe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context="org.glucosio.android.faithworks.glucosio.android.activity.HelloActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingTop="32dp"
        android:paddingRight="32dp"
        android:paddingBottom="32dp">

        <TextView
            android:id="@+id/activity_hello_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="32dp"
            android:text="@string/helloactivity_headline"
            android:textColor="@color/glucosio_text_dark"
            android:textSize="@dimen/abc_text_size_display_1_material" />

        <TextView
            android:id="@+id/activity_hello_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:text="@string/helloactivity_subhead"
            android:textColor="@color/glucosio_text"
            android:textSize="@dimen/abc_text_size_subhead_material" />

        <faithworks.diabetesmonitoring.android.tools.LabelledSpinner
            android:id="@+id/activity_hello_spinner_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            custom:labelText="@string/helloactivity_country"
            custom:widgetColor="@color/glucosio_pink" />

        <faithworks.diabetesmonitoring.android.tools.LabelledSpinner
            android:id="@+id/activity_hello_spinner_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            custom:labelText="@string/helloactivity_language"
            custom:widgetColor="@color/glucosio_pink" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/activity_hello_age"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:digits="0123456789"
                    android:hint="@string/helloactivity_age"
                    android:inputType="number"
                    android:maxLines="1"
                    android:textSize="@dimen/abc_text_size_body_2_material" />
            </android.support.design.widget.TextInputLayout>

            <faithworks.diabetesmonitoring.android.tools.LabelledSpinner
                android:id="@+id/activity_hello_spinner_gender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="-17dp"
                android:layout_weight="1"
                android:textSize="@dimen/abc_text_size_body_2_material"
                custom:labelText="@string/helloactivity_gender"
                custom:widgetColor="@color/glucosio_pink" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <faithworks.diabetesmonitoring.android.tools.LabelledSpinner
                android:id="@+id/activity_hello_spinner_diabetes_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="-17dp"
                android:layout_weight="1"
                android:textSize="@dimen/abc_text_size_body_2_material"
                custom:labelText="@string/helloactivity_spinner_diabetes_type"
                custom:widgetColor="@color/glucosio_pink" />

            <faithworks.diabetesmonitoring.android.tools.LabelledSpinner
                android:id="@+id/activity_hello_spinner_preferred_unit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="-17dp"
                android:layout_weight="1"
                android:textSize="@dimen/abc_text_size_body_2_material"
                custom:labelText="@string/helloactivity_spinner_preferred_glucose_unit"
                custom:widgetColor="@color/glucosio_pink" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/activity_hello_check_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:checked="true"
            android:text="@string/helloactivity_share_data" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/helloactivity_hint_settings"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/helloactivity_textview_tos"
            android:textColor="@color/glucosio_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/helloactivity_textview_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/helloactivity_terms"
            android:textColor="@color/glucosio_pink"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/activity_hello_button_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="24dp"
            android:background="?android:attr/selectableItemBackground"
            android:drawableEnd="@drawable/ic_navigate_next_pink_24px"
            android:drawableRight="@drawable/ic_navigate_next_pink_24px"
            android:padding="8dp"
            android:text="@string/helloactivity_button_start"
            android:textColor="@color/glucosio_pink"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>
